--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,16 @@ html,body,.container {
 .container > .left a {
 	color: #fff;
 	font-size: 16px;
+	margin-left: 15px;
 }
+/*标题首页*/
 .left > .title {
 	font-size: 20px;
 	font-weight: bold;
 	text-align: center;
 	line-height: 4em;
-	border-bottom: 1px solid #ededed
+	border-bottom: 1px solid #ededed;
+	cursor:pointer;
 }
 .left >ul.left_nav {
 
